@@ -1,3 +1,0 @@
-lib
-Makefile.save
-des
